<package format="2">
  <name>liv_robot</name>
  <version>1.0.0</version>
  <description>
    This package contains Gazebo models for AGV robot (LiDAR-IMU-Camera) simulation.
  </description>
  <author>TODO</author>
  <maintainer email="TODO@email.com" />
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roslaunch</depend>
  <depend>urdf</depend>
  <depend>xacro</depend>
  <depend>rviz</depend>
  <depend>gazebo</depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo_plugins</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>velodyne_gazebo_plugins</depend>
  <export>
    <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" gazebo_model_path="${prefix}/models"/>
  </export>
</package>